fixed naming of vertical-align class in tables

--- a/livingdocs/040.Media/010.table/scss/general.scss
+++ b/livingdocs/040.Media/010.table/scss/general.scss
@@ -270,15 +270,15 @@ td {
     text-align: right;
   }
 
-  &[class*="vertical-top"] {
+  &[class*="vatop"] {
     vertical-align: top;
   }
 
-  &[class*="vertical-middle"] {
+  &[class*="vamiddle"] {
     vertical-align: middle;
   }
 
-  &[class*="vertical-bottom"] {
+  &[class*="vabottom"] {
     vertical-align: bottom;
   }
 
